@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2017, 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2017, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -34,7 +34,6 @@ import javax.xml.stream.XMLStreamReader;
 import org.testng.Assert;
 import static org.testng.Assert.assertEquals;
 import org.testng.annotations.DataProvider;
-import org.testng.annotations.Listeners;
 import org.testng.annotations.Test;
 import org.w3c.dom.Document;
 import org.w3c.dom.ls.DOMImplementationLS;
@@ -48,11 +47,9 @@ import org.xml.sax.helpers.DefaultHandler;
  * @test
  * @bug 8169450 8222415 8219692
  * @library /javax/xml/jaxp/libs /javax/xml/jaxp/unittest
- * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow parsers.BaseParsingTest
  * @run testng/othervm parsers.BaseParsingTest
  * @summary Tests that verify base parsing
  */
-@Listeners({jaxp.library.BasePolicy.class})
 public class BaseParsingTest {
     private static final String DOM_IMPL =
             "com.sun.org.apache.xerces.internal.jaxp.DocumentBuilderFactoryImpl";
